force-app/main/default/objects/Schedule_A_Quote_Item__c/Schedule_A_Quote_Item__c.object-meta.xml
<CustomObject>
    <description>Schedule A Quote item pricing per Schedule A</description>
    <label>Schedule A Quote Item</label>
    <nameField>
        <displayFormat>SAL-{00000}</displayFormat>
        <label>Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedule A Quote Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>