force-app/main/default/objects/Schedule_A_Quote_Item__c/fields/Cashview_Cost_Line__c.field-meta.xml
<CustomField>
    <fullName>Cashview_Cost_Line__c</fullName>
    <label>Cashview Cost (Line)</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>