force-app/main/default/objects/Schedule_A_Quote_Item__c/fields/Cashview_Margin_Line__c.field-meta.xml
<CustomField>
    <fullName>Cashview_Margin_Line__c</fullName>
    <formula>Line_Revenue__c - (Cashview_Cost_Line__c *  XML_Proposed_Volume__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cashview Margin $ (Line)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>