force-app/main/default/objects/Schedule_A_Quote_Item__c/fields/Current_Price__c.field-meta.xml
<CustomField>
    <fullName>Current_Price__c</fullName>
    <label>Current Price</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>