force-app/main/default/objects/Schedule_A_Quote_Item__c/fields/Current_Volume__c.field-meta.xml
<CustomField>
    <fullName>Current_Volume__c</fullName>
    <label>Current Volume</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>