force-app/main/default/objects/Schedule_A_Quote_Item__c/fields/Floor_Price__c.field-meta.xml
<CustomField>
    <fullName>Floor_Price__c</fullName>
    <description>Gets stamped with the original price as uploaded in the PA Model - needed to enable the rep to price down to but not below the approved Floor Price</description>
    <label>Floor Price</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>