force-app/main/default/objects/Schedule_A_Quote_Item__c/fields/Keep_Flag__c.field-meta.xml
<CustomField>
    <fullName>Keep_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Keep Flag</label>
    <type>Checkbox</type>
</CustomField>