force-app/main/default/objects/Schedule_A_Quote_Item__c/fields/Line_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Line_Revenue__c</fullName>
    <description>Adding field to hold the revenue of PA Model Lines</description>
    <label>Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>