force-app/main/default/objects/Schedule_A_Quote_Item__c/fields/List_Price_000__c.field-meta.xml
<CustomField>
    <fullName>List_Price_000__c</fullName>
    <formula>TEXT(ROUND(List_Price__c,3))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price (.000)</label>
    <type>Text</type>
</CustomField>