force-app/main/default/objects/Schedule_A_Quote_Item__c/fields/Offering_Type__c.field-meta.xml
<CustomField>
    <fullName>Offering_Type__c</fullName>
    <label>tobedeleted_Offering Type</label>
    <type>TextArea</type>
</CustomField>