force-app/main/default/objects/Schedule_A_Quote_Item__c/fields/PBE__c.field-meta.xml
<CustomField>
    <fullName>PBE__c</fullName>
    <description>Pricebook entry id</description>
    <inlineHelpText>Pricebook entry id</inlineHelpText>
    <label>PBE</label>
    <length>25</length>
    <type>Text</type>
</CustomField>