force-app/main/default/objects/Schedule_A_Quote_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product Associated with the schedule a line</description>
    <inlineHelpText>Product Associated with the schedule a line</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Schedule A Quote Items</relationshipLabel>
    <relationshipName>Schedule_A_Quote_Items_del</relationshipName>
    <type>Lookup</type>
</CustomField>