force-app/main/default/objects/Schedule_A_Quote_Item__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <formula>IF ( Product__r.ProductCode = &apos;Next Day Delivery&apos;,
SUBSTITUTE( Product__r.ProductCode,  &quot;Next Day&quot;,  &quot;Standard&quot; ),
IF(Product__r.ProductCode = &apos;Trip Charge, Next Day, Zone 2&apos; || Product__r.ProductCode = &apos;Trip Charge, Next Day, Zone 3&apos; || Product__r.ProductCode = &apos;Trip Charge, Next Day, Zone 4&apos; || Product__r.ProductCode = &apos;Trip Charge, Next Day, Zone Metro&apos; || Product__r.ProductCode = &apos;Trip Charge, Next Day, Zone Metro NY&apos; , SUBSTITUTE( Product__r.ProductCode,  &quot;Next Day&quot;,  &quot;Standard Delivery&quot; ),Product__r.ProductCode))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>