force-app/main/default/objects/Schedule_A_Quote_Item__c/fields/Product_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Number__c</fullName>
    <description>Product Number</description>
    <inlineHelpText>Product Bill Code</inlineHelpText>
    <label>Product Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>