force-app/main/default/objects/Schedule_A_Quote_Item__c/fields/Proposed_Price_000__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Price_000__c</fullName>
    <formula>TEXT(ROUND(Proposed_Price__c,3))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposed Price (.000)</label>
    <type>Text</type>
</CustomField>