force-app/main/default/objects/Schedule_A_Quote_Item__c/fields/Proposed_Price__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Price__c</fullName>
    <description>Proposed Price of Item</description>
    <inlineHelpText>Proposed Price of Item</inlineHelpText>
    <label>Proposed Price</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>