force-app/main/default/objects/Schedule_A_Quote_Item__c/fields/Proposed_Price_Year_3__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Price_Year_3__c</fullName>
    <label>Proposed Price Year 3</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>