force-app/main/default/objects/Schedule_A_Quote_Item__c/fields/Proposed_Volume__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Volume__c</fullName>
    <description>Captures adjustments made to the XML Proposed Volume</description>
    <inlineHelpText>Number of items</inlineHelpText>
    <label>Adjusted Volume (Qty)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>