force-app/main/default/objects/Schedule_A_Quote_Item__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <formula>IF( Adjusted_Price__c  = 0,  Proposed_Price__c  *  XML_Proposed_Volume__c , Adjusted_Price__c * XML_Proposed_Volume__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>