force-app/main/default/objects/Schedule_A_Quote_Item__c/fields/Schedule_A__c.field-meta.xml
<CustomField>
    <fullName>Schedule_A__c</fullName>
    <description>Parent Schedule A</description>
    <inlineHelpText>Schedule A Quote Item</inlineHelpText>
    <label>Schedule A</label>
    <referenceTo>Schedule_A__c</referenceTo>
    <relationshipLabel>Schedule A Quote Items</relationshipLabel>
    <relationshipName>Schedule_A_Quote_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>