force-app/main/default/objects/Schedule_A_Quote_Item__c/fields/Schedule_A_Category__c.field-meta.xml
<CustomField>
    <fullName>Schedule_A_Category__c</fullName>
    <formula>Product__r.Schedule_A_Category__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule A Category</label>
    <type>Text</type>
</CustomField>