force-app/main/default/objects/Schedule_A_Quote_Item__c/fields/Target_Price__c.field-meta.xml
<CustomField>
    <fullName>Target_Price__c</fullName>
    <label>Target Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>