force-app/main/default/objects/Schedule_A_Quote_Item__c/fields/Target_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Target_Revenue__c</fullName>
    <formula>Target_Price__c  *  XML_Proposed_Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>