force-app/main/default/objects/Schedule_A_Quote_Item__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <formula>TEXT(Product__r.IM_Unit_of_Measure__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit of Measure</label>
    <type>Text</type>
</CustomField>