force-app/main/default/objects/Schedule_A_Quote_Item__c/fields/XML_Proposed_Volume__c.field-meta.xml
<CustomField>
    <fullName>XML_Proposed_Volume__c</fullName>
    <label>Proposed Volume</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>