force-app/main/default/objects/Schedule_A_Quote_Item__c/recordTypes/Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Read_Only</fullName>
    <active>true</active>
    <description>Schedule A Quote Item Record Type - Read Only</description>
    <label>Read-Only</label>
</RecordType>