force-app/main/default/objects/Schedule_A_Quote_Item__c/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <fullName>Standard</fullName>
    <active>true</active>
    <description>Schedule A Quote Item Standard Record Type</description>
    <label>Standard</label>
</RecordType>